probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: limits
  labels:
    app: limits
spec:
  replicas: 2
  selector:
    matchLabels:
      app: limits
  template:
    metadata:
      labels:
        app: limits
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:blue
        name: limits
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 16Gi
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
