rbac.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-rbac
spec:
  serviceAccountName: view-pod
  containers:
  - image: bitnami/kubectl:1.18-debian-10
    command:
    - sleep
    - "3600"
    name: test-rbac
