schedule.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: limits
  labels:
    app: limits
spec:
  replicas: 1
  selector:
    matchLabels:
      app: limits
  template:
    metadata:
      labels:
        app: limits
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:blue
        name: limits
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 16Gi
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
